Ajout du projet java-config

--- a/java-config/pom.xml
+++ b/java-config/pom.xml
@@ -9,19 +9,21 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>webxml-config</artifactId>
+    <artifactId>java-config</artifactId>
+
     <packaging>war</packaging>
+
     <dependencies>
         <dependency>
-            <groupId>org.glassfish.jersey.media</groupId>
-            <artifactId>jersey-media-jaxb</artifactId>
+            <groupId>org.glassfish.jersey.containers</groupId>
+            <artifactId>jersey-container-servlet</artifactId>
             <version>3.0.5</version>
         </dependency>
-
         <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
-            <artifactId>jersey-media-json-jackson</artifactId>
+            <artifactId>jersey-media-json-binding</artifactId>
             <version>3.0.5</version>
         </dependency>
     </dependencies>
+
 </project>
