--- a/webxml-config/pom.xml
+++ b/webxml-config/pom.xml
@@ -12,6 +12,24 @@
     <artifactId>webxml-config</artifactId>
     <packaging>war</packaging>
     <dependencies>
+        <!--DEPENDENCES JERSEY POUR APPLICATION WEB-->
+        <dependency>
+            <groupId>org.glassfish.jersey.containers</groupId>
+            <artifactId>jersey-container-servlet-core</artifactId>
+            <version>3.0.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.inject</groupId>
+            <artifactId>jersey-hk2</artifactId>
+            <version>3.0.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+
+        <!--DEPENDENCES JERSEY POUR LES MEDIAS-->
         <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-jaxb</artifactId>
