--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,11 @@
     <groupId>com.j4ltechnologies</groupId>
     <artifactId>java-rest-api</artifactId>
     <version>1.0-SNAPSHOT</version>
+
     <modules>
         <module>webxml-config</module>
         <module>java-config</module>
-        <module>javaee-config</module>
+        <module>jakartaee-config</module>
     </modules>
 
     <packaging>pom</packaging>
@@ -21,7 +22,6 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
-
     <build>
         <plugins>
             <!--PLUGIN JETTY POUR LE SERVER-->
@@ -29,6 +29,13 @@
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>11.0.9</version>
+            </plugin>
+
+            <!--COMPILATION DES WARS-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.3.2</version>
             </plugin>
         </plugins>
     </build>
